version 0.8
	Added the logfilter utility. See README for description and example uses
	
version 0.7.2
	Added missing -d and -f parameters to logsample for enabling weighted reservoir sampling
	Bugfix to geoip --filter default value triggering a filtering by default (regression introduced in in 0.7.1)

version 0.7.1
	Small fix with geoip --filter default value

version 0.7
	Added -q flag to urlparse (See README/documentation for examples)
	Added -f flag to geoip, allowing one to filter inplace for a specific country (e.g -f 'United States')
	Added --decode options to urlparse that allows one to url-decode (unquote) input stream
	Added sumstat utility/API for generating some common summary statistics for a given histogram-like logfile. See README for examples
	Added 'colsum' script utility that does an arithmetic summation over a column of data
	Added stripping of leading whitespace from output of 'aggregate' script
	Updated documentation, Added more examples for new utilities in README
	Updated unit-tests to reflect additions/changes to tools
	Unicode encoding in logplot line-plot using matplotlib backend (would crash with encoding problems in some cases)
	Unicode encoding for the logparse, fixes some cases of errors, e.g when using JSONParser for a JSON that has non-string types (e.g integers)
	Fixed bug in use of --ignore for logparse
	Default value for --delimiter is now ' ' across commands (logjoin etc.)
	
version 0.6
	Added --header flag to logparse, will prepend output with field names. useful e.g for dumping to CSV file
	Added --parser and --ip-ua-fields options to filterbots, allows routing input through a parser for filtering bots
	Updated logmerge to support indexed/named field-based merge-sorting when using --parser. See README for examples
	Added Histogram plot type support to logplot (--type hist)
	Added urlparse utility/API. See README for details
	Added logjoin utility/API. See README for details